// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render without exploding 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <styled.div>
        <styled.h1>
                Lazy Load Transcript
        </styled.h1>
        <styled.div>
                <styled.div>
                        <ActionButton
                                active={true}
                                onClick={[Function]}
                                size="small"
                        >
                                English
                        </ActionButton>
                        <ActionButton
                                active={false}
                                onClick={[Function]}
                                size="small"
                        >
                                French
                        </ActionButton>
                </styled.div>
                <styled.h3>
                        Page 
                        1
                </styled.h3>
        </styled.div>
        <TranscriptView
                currentLanguage="english"
                loadingData={true}
                text={Array []}
                translating={false}
        />
        <styled.div>
                <ActionButton
                        onClick={[Function]}
                        size="large"
                >
                        Previous Page
                </ActionButton>
                <ActionButton
                        onClick={[Function]}
                        size="large"
                >
                        Next Page
                </ActionButton>
                <ActionButton
                        onClick={[Function]}
                        size="large"
                >
                        Translate
                </ActionButton>
        </styled.div>
</styled.div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.h1>
            Lazy Load Transcript
</styled.h1>,
          <styled.div>
            <styled.div>
                        <ActionButton
                                    active={true}
                                    onClick={[Function]}
                                    size="small"
                        >
                                    English
                        </ActionButton>
                        <ActionButton
                                    active={false}
                                    onClick={[Function]}
                                    size="small"
                        >
                                    French
                        </ActionButton>
            </styled.div>
            <styled.h3>
                        Page 
                        1
            </styled.h3>
</styled.div>,
          <TranscriptView
            currentLanguage="english"
            loadingData={true}
            text={Array []}
            translating={false}
/>,
          <styled.div>
            <ActionButton
                        onClick={[Function]}
                        size="large"
            >
                        Previous Page
            </ActionButton>
            <ActionButton
                        onClick={[Function]}
                        size="large"
            >
                        Next Page
            </ActionButton>
            <ActionButton
                        onClick={[Function]}
                        size="large"
            >
                        Translate
            </ActionButton>
</styled.div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Lazy Load Transcript",
          },
          "ref": null,
          "rendered": "Lazy Load Transcript",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div>
                <ActionButton
                                active={true}
                                onClick={[Function]}
                                size="small"
                >
                                English
                </ActionButton>
                <ActionButton
                                active={false}
                                onClick={[Function]}
                                size="small"
                >
                                French
                </ActionButton>
</styled.div>,
              <styled.h3>
                Page 
                1
</styled.h3>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <ActionButton
                    active={true}
                    onClick={[Function]}
                    size="small"
>
                    English
</ActionButton>,
                  <ActionButton
                    active={false}
                    onClick={[Function]}
                    size="small"
>
                    French
</ActionButton>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "active": true,
                    "children": "English",
                    "onClick": [Function],
                    "size": "small",
                  },
                  "ref": null,
                  "rendered": "English",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "active": false,
                    "children": "French",
                    "onClick": [Function],
                    "size": "small",
                  },
                  "ref": null,
                  "rendered": "French",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "Page ",
                  1,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Page ",
                1,
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "currentLanguage": "english",
            "loadingData": true,
            "text": Array [],
            "translating": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <ActionButton
                onClick={[Function]}
                size="large"
>
                Previous Page
</ActionButton>,
              <ActionButton
                onClick={[Function]}
                size="large"
>
                Next Page
</ActionButton>,
              <ActionButton
                onClick={[Function]}
                size="large"
>
                Translate
</ActionButton>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Previous Page",
                "onClick": [Function],
                "size": "large",
              },
              "ref": null,
              "rendered": "Previous Page",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Next Page",
                "onClick": [Function],
                "size": "large",
              },
              "ref": null,
              "rendered": "Next Page",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Translate",
                "onClick": [Function],
                "size": "large",
              },
              "ref": null,
              "rendered": "Translate",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <styled.div>
          <styled.h1>
                    Lazy Load Transcript
          </styled.h1>
          <styled.div>
                    <styled.div>
                              <ActionButton
                                        active={true}
                                        onClick={[Function]}
                                        size="small"
                              >
                                        English
                              </ActionButton>
                              <ActionButton
                                        active={false}
                                        onClick={[Function]}
                                        size="small"
                              >
                                        French
                              </ActionButton>
                    </styled.div>
                    <styled.h3>
                              Page 
                              1
                    </styled.h3>
          </styled.div>
          <TranscriptView
                    currentLanguage="english"
                    loadingData={true}
                    text={Array []}
                    translating={false}
          />
          <styled.div>
                    <ActionButton
                              onClick={[Function]}
                              size="large"
                    >
                              Previous Page
                    </ActionButton>
                    <ActionButton
                              onClick={[Function]}
                              size="large"
                    >
                              Next Page
                    </ActionButton>
                    <ActionButton
                              onClick={[Function]}
                              size="large"
                    >
                              Translate
                    </ActionButton>
          </styled.div>
</styled.div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.h1>
              Lazy Load Transcript
</styled.h1>,
            <styled.div>
              <styled.div>
                            <ActionButton
                                          active={true}
                                          onClick={[Function]}
                                          size="small"
                            >
                                          English
                            </ActionButton>
                            <ActionButton
                                          active={false}
                                          onClick={[Function]}
                                          size="small"
                            >
                                          French
                            </ActionButton>
              </styled.div>
              <styled.h3>
                            Page 
                            1
              </styled.h3>
</styled.div>,
            <TranscriptView
              currentLanguage="english"
              loadingData={true}
              text={Array []}
              translating={false}
/>,
            <styled.div>
              <ActionButton
                            onClick={[Function]}
                            size="large"
              >
                            Previous Page
              </ActionButton>
              <ActionButton
                            onClick={[Function]}
                            size="large"
              >
                            Next Page
              </ActionButton>
              <ActionButton
                            onClick={[Function]}
                            size="large"
              >
                            Translate
              </ActionButton>
</styled.div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Lazy Load Transcript",
            },
            "ref": null,
            "rendered": "Lazy Load Transcript",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.div>
                  <ActionButton
                                    active={true}
                                    onClick={[Function]}
                                    size="small"
                  >
                                    English
                  </ActionButton>
                  <ActionButton
                                    active={false}
                                    onClick={[Function]}
                                    size="small"
                  >
                                    French
                  </ActionButton>
</styled.div>,
                <styled.h3>
                  Page 
                  1
</styled.h3>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <ActionButton
                      active={true}
                      onClick={[Function]}
                      size="small"
>
                      English
</ActionButton>,
                    <ActionButton
                      active={false}
                      onClick={[Function]}
                      size="small"
>
                      French
</ActionButton>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "active": true,
                      "children": "English",
                      "onClick": [Function],
                      "size": "small",
                    },
                    "ref": null,
                    "rendered": "English",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "active": false,
                      "children": "French",
                      "onClick": [Function],
                      "size": "small",
                    },
                    "ref": null,
                    "rendered": "French",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "Page ",
                    1,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Page ",
                  1,
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "currentLanguage": "english",
              "loadingData": true,
              "text": Array [],
              "translating": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <ActionButton
                  onClick={[Function]}
                  size="large"
>
                  Previous Page
</ActionButton>,
                <ActionButton
                  onClick={[Function]}
                  size="large"
>
                  Next Page
</ActionButton>,
                <ActionButton
                  onClick={[Function]}
                  size="large"
>
                  Translate
</ActionButton>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Previous Page",
                  "onClick": [Function],
                  "size": "large",
                },
                "ref": null,
                "rendered": "Previous Page",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Next Page",
                  "onClick": [Function],
                  "size": "large",
                },
                "ref": null,
                "rendered": "Next Page",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Translate",
                  "onClick": [Function],
                  "size": "large",
                },
                "ref": null,
                "rendered": "Translate",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should switch view when the language is switched from English to French and back 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <styled.div>
        <styled.h1>
                Lazy Load Transcript
        </styled.h1>
        <styled.div>
                <styled.div>
                        <ActionButton
                                active={true}
                                onClick={[Function]}
                                size="small"
                        >
                                English
                        </ActionButton>
                        <ActionButton
                                active={false}
                                onClick={[Function]}
                                size="small"
                        >
                                French
                        </ActionButton>
                </styled.div>
                <styled.h3>
                        Page 
                        1
                </styled.h3>
        </styled.div>
        <TranscriptView
                currentLanguage="english"
                loadingData={true}
                text={
                        Array [
                                "one two three",
                              ]
                }
                translating={false}
        />
        <styled.div>
                <ActionButton
                        onClick={[Function]}
                        size="large"
                >
                        Previous Page
                </ActionButton>
                <ActionButton
                        onClick={[Function]}
                        size="large"
                >
                        Next Page
                </ActionButton>
                <ActionButton
                        onClick={[Function]}
                        size="large"
                >
                        Translate
                </ActionButton>
        </styled.div>
</styled.div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.h1>
            Lazy Load Transcript
</styled.h1>,
          <styled.div>
            <styled.div>
                        <ActionButton
                                    active={true}
                                    onClick={[Function]}
                                    size="small"
                        >
                                    English
                        </ActionButton>
                        <ActionButton
                                    active={false}
                                    onClick={[Function]}
                                    size="small"
                        >
                                    French
                        </ActionButton>
            </styled.div>
            <styled.h3>
                        Page 
                        1
            </styled.h3>
</styled.div>,
          <TranscriptView
            currentLanguage="english"
            loadingData={true}
            text={
                        Array [
                                    "one two three",
                                  ]
            }
            translating={false}
/>,
          <styled.div>
            <ActionButton
                        onClick={[Function]}
                        size="large"
            >
                        Previous Page
            </ActionButton>
            <ActionButton
                        onClick={[Function]}
                        size="large"
            >
                        Next Page
            </ActionButton>
            <ActionButton
                        onClick={[Function]}
                        size="large"
            >
                        Translate
            </ActionButton>
</styled.div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Lazy Load Transcript",
          },
          "ref": null,
          "rendered": "Lazy Load Transcript",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div>
                <ActionButton
                                active={true}
                                onClick={[Function]}
                                size="small"
                >
                                English
                </ActionButton>
                <ActionButton
                                active={false}
                                onClick={[Function]}
                                size="small"
                >
                                French
                </ActionButton>
</styled.div>,
              <styled.h3>
                Page 
                1
</styled.h3>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <ActionButton
                    active={true}
                    onClick={[Function]}
                    size="small"
>
                    English
</ActionButton>,
                  <ActionButton
                    active={false}
                    onClick={[Function]}
                    size="small"
>
                    French
</ActionButton>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "active": true,
                    "children": "English",
                    "onClick": [Function],
                    "size": "small",
                  },
                  "ref": null,
                  "rendered": "English",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "active": false,
                    "children": "French",
                    "onClick": [Function],
                    "size": "small",
                  },
                  "ref": null,
                  "rendered": "French",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "Page ",
                  1,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Page ",
                1,
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "currentLanguage": "english",
            "loadingData": true,
            "text": Array [
              "one two three",
            ],
            "translating": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <ActionButton
                onClick={[Function]}
                size="large"
>
                Previous Page
</ActionButton>,
              <ActionButton
                onClick={[Function]}
                size="large"
>
                Next Page
</ActionButton>,
              <ActionButton
                onClick={[Function]}
                size="large"
>
                Translate
</ActionButton>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Previous Page",
                "onClick": [Function],
                "size": "large",
              },
              "ref": null,
              "rendered": "Previous Page",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Next Page",
                "onClick": [Function],
                "size": "large",
              },
              "ref": null,
              "rendered": "Next Page",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Translate",
                "onClick": [Function],
                "size": "large",
              },
              "ref": null,
              "rendered": "Translate",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <styled.div>
          <styled.h1>
                    Lazy Load Transcript
          </styled.h1>
          <styled.div>
                    <styled.div>
                              <ActionButton
                                        active={true}
                                        onClick={[Function]}
                                        size="small"
                              >
                                        English
                              </ActionButton>
                              <ActionButton
                                        active={false}
                                        onClick={[Function]}
                                        size="small"
                              >
                                        French
                              </ActionButton>
                    </styled.div>
                    <styled.h3>
                              Page 
                              1
                    </styled.h3>
          </styled.div>
          <TranscriptView
                    currentLanguage="english"
                    loadingData={true}
                    text={
                              Array [
                                        "one two three",
                                      ]
                    }
                    translating={false}
          />
          <styled.div>
                    <ActionButton
                              onClick={[Function]}
                              size="large"
                    >
                              Previous Page
                    </ActionButton>
                    <ActionButton
                              onClick={[Function]}
                              size="large"
                    >
                              Next Page
                    </ActionButton>
                    <ActionButton
                              onClick={[Function]}
                              size="large"
                    >
                              Translate
                    </ActionButton>
          </styled.div>
</styled.div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.h1>
              Lazy Load Transcript
</styled.h1>,
            <styled.div>
              <styled.div>
                            <ActionButton
                                          active={true}
                                          onClick={[Function]}
                                          size="small"
                            >
                                          English
                            </ActionButton>
                            <ActionButton
                                          active={false}
                                          onClick={[Function]}
                                          size="small"
                            >
                                          French
                            </ActionButton>
              </styled.div>
              <styled.h3>
                            Page 
                            1
              </styled.h3>
</styled.div>,
            <TranscriptView
              currentLanguage="english"
              loadingData={true}
              text={
                            Array [
                                          "one two three",
                                        ]
              }
              translating={false}
/>,
            <styled.div>
              <ActionButton
                            onClick={[Function]}
                            size="large"
              >
                            Previous Page
              </ActionButton>
              <ActionButton
                            onClick={[Function]}
                            size="large"
              >
                            Next Page
              </ActionButton>
              <ActionButton
                            onClick={[Function]}
                            size="large"
              >
                            Translate
              </ActionButton>
</styled.div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Lazy Load Transcript",
            },
            "ref": null,
            "rendered": "Lazy Load Transcript",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.div>
                  <ActionButton
                                    active={true}
                                    onClick={[Function]}
                                    size="small"
                  >
                                    English
                  </ActionButton>
                  <ActionButton
                                    active={false}
                                    onClick={[Function]}
                                    size="small"
                  >
                                    French
                  </ActionButton>
</styled.div>,
                <styled.h3>
                  Page 
                  1
</styled.h3>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <ActionButton
                      active={true}
                      onClick={[Function]}
                      size="small"
>
                      English
</ActionButton>,
                    <ActionButton
                      active={false}
                      onClick={[Function]}
                      size="small"
>
                      French
</ActionButton>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "active": true,
                      "children": "English",
                      "onClick": [Function],
                      "size": "small",
                    },
                    "ref": null,
                    "rendered": "English",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "active": false,
                      "children": "French",
                      "onClick": [Function],
                      "size": "small",
                    },
                    "ref": null,
                    "rendered": "French",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "Page ",
                    1,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Page ",
                  1,
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "currentLanguage": "english",
              "loadingData": true,
              "text": Array [
                "one two three",
              ],
              "translating": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <ActionButton
                  onClick={[Function]}
                  size="large"
>
                  Previous Page
</ActionButton>,
                <ActionButton
                  onClick={[Function]}
                  size="large"
>
                  Next Page
</ActionButton>,
                <ActionButton
                  onClick={[Function]}
                  size="large"
>
                  Translate
</ActionButton>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Previous Page",
                  "onClick": [Function],
                  "size": "large",
                },
                "ref": null,
                "rendered": "Previous Page",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Next Page",
                  "onClick": [Function],
                  "size": "large",
                },
                "ref": null,
                "rendered": "Next Page",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Translate",
                  "onClick": [Function],
                  "size": "large",
                },
                "ref": null,
                "rendered": "Translate",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should switch view when the language is switched from English to French and back 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <styled.div>
        <styled.h1>
                Lazy Load Transcript
        </styled.h1>
        <styled.div>
                <styled.div>
                        <ActionButton
                                active={true}
                                onClick={[Function]}
                                size="small"
                        >
                                English
                        </ActionButton>
                        <ActionButton
                                active={false}
                                onClick={[Function]}
                                size="small"
                        >
                                French
                        </ActionButton>
                </styled.div>
                <styled.h3>
                        Page 
                        1
                </styled.h3>
        </styled.div>
        <TranscriptView
                currentLanguage="english"
                loadingData={true}
                text={
                        Array [
                                "one two three",
                              ]
                }
                translating={false}
        />
        <styled.div>
                <ActionButton
                        onClick={[Function]}
                        size="large"
                >
                        Previous Page
                </ActionButton>
                <ActionButton
                        onClick={[Function]}
                        size="large"
                >
                        Next Page
                </ActionButton>
                <ActionButton
                        onClick={[Function]}
                        size="large"
                >
                        Translate
                </ActionButton>
        </styled.div>
</styled.div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.h1>
            Lazy Load Transcript
</styled.h1>,
          <styled.div>
            <styled.div>
                        <ActionButton
                                    active={true}
                                    onClick={[Function]}
                                    size="small"
                        >
                                    English
                        </ActionButton>
                        <ActionButton
                                    active={false}
                                    onClick={[Function]}
                                    size="small"
                        >
                                    French
                        </ActionButton>
            </styled.div>
            <styled.h3>
                        Page 
                        1
            </styled.h3>
</styled.div>,
          <TranscriptView
            currentLanguage="english"
            loadingData={true}
            text={
                        Array [
                                    "one two three",
                                  ]
            }
            translating={false}
/>,
          <styled.div>
            <ActionButton
                        onClick={[Function]}
                        size="large"
            >
                        Previous Page
            </ActionButton>
            <ActionButton
                        onClick={[Function]}
                        size="large"
            >
                        Next Page
            </ActionButton>
            <ActionButton
                        onClick={[Function]}
                        size="large"
            >
                        Translate
            </ActionButton>
</styled.div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Lazy Load Transcript",
          },
          "ref": null,
          "rendered": "Lazy Load Transcript",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div>
                <ActionButton
                                active={true}
                                onClick={[Function]}
                                size="small"
                >
                                English
                </ActionButton>
                <ActionButton
                                active={false}
                                onClick={[Function]}
                                size="small"
                >
                                French
                </ActionButton>
</styled.div>,
              <styled.h3>
                Page 
                1
</styled.h3>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <ActionButton
                    active={true}
                    onClick={[Function]}
                    size="small"
>
                    English
</ActionButton>,
                  <ActionButton
                    active={false}
                    onClick={[Function]}
                    size="small"
>
                    French
</ActionButton>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "active": true,
                    "children": "English",
                    "onClick": [Function],
                    "size": "small",
                  },
                  "ref": null,
                  "rendered": "English",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "active": false,
                    "children": "French",
                    "onClick": [Function],
                    "size": "small",
                  },
                  "ref": null,
                  "rendered": "French",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "Page ",
                  1,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Page ",
                1,
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "currentLanguage": "english",
            "loadingData": true,
            "text": Array [
              "one two three",
            ],
            "translating": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <ActionButton
                onClick={[Function]}
                size="large"
>
                Previous Page
</ActionButton>,
              <ActionButton
                onClick={[Function]}
                size="large"
>
                Next Page
</ActionButton>,
              <ActionButton
                onClick={[Function]}
                size="large"
>
                Translate
</ActionButton>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Previous Page",
                "onClick": [Function],
                "size": "large",
              },
              "ref": null,
              "rendered": "Previous Page",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Next Page",
                "onClick": [Function],
                "size": "large",
              },
              "ref": null,
              "rendered": "Next Page",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Translate",
                "onClick": [Function],
                "size": "large",
              },
              "ref": null,
              "rendered": "Translate",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <styled.div>
          <styled.h1>
                    Lazy Load Transcript
          </styled.h1>
          <styled.div>
                    <styled.div>
                              <ActionButton
                                        active={true}
                                        onClick={[Function]}
                                        size="small"
                              >
                                        English
                              </ActionButton>
                              <ActionButton
                                        active={false}
                                        onClick={[Function]}
                                        size="small"
                              >
                                        French
                              </ActionButton>
                    </styled.div>
                    <styled.h3>
                              Page 
                              1
                    </styled.h3>
          </styled.div>
          <TranscriptView
                    currentLanguage="english"
                    loadingData={true}
                    text={
                              Array [
                                        "one two three",
                                      ]
                    }
                    translating={false}
          />
          <styled.div>
                    <ActionButton
                              onClick={[Function]}
                              size="large"
                    >
                              Previous Page
                    </ActionButton>
                    <ActionButton
                              onClick={[Function]}
                              size="large"
                    >
                              Next Page
                    </ActionButton>
                    <ActionButton
                              onClick={[Function]}
                              size="large"
                    >
                              Translate
                    </ActionButton>
          </styled.div>
</styled.div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.h1>
              Lazy Load Transcript
</styled.h1>,
            <styled.div>
              <styled.div>
                            <ActionButton
                                          active={true}
                                          onClick={[Function]}
                                          size="small"
                            >
                                          English
                            </ActionButton>
                            <ActionButton
                                          active={false}
                                          onClick={[Function]}
                                          size="small"
                            >
                                          French
                            </ActionButton>
              </styled.div>
              <styled.h3>
                            Page 
                            1
              </styled.h3>
</styled.div>,
            <TranscriptView
              currentLanguage="english"
              loadingData={true}
              text={
                            Array [
                                          "one two three",
                                        ]
              }
              translating={false}
/>,
            <styled.div>
              <ActionButton
                            onClick={[Function]}
                            size="large"
              >
                            Previous Page
              </ActionButton>
              <ActionButton
                            onClick={[Function]}
                            size="large"
              >
                            Next Page
              </ActionButton>
              <ActionButton
                            onClick={[Function]}
                            size="large"
              >
                            Translate
              </ActionButton>
</styled.div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Lazy Load Transcript",
            },
            "ref": null,
            "rendered": "Lazy Load Transcript",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.div>
                  <ActionButton
                                    active={true}
                                    onClick={[Function]}
                                    size="small"
                  >
                                    English
                  </ActionButton>
                  <ActionButton
                                    active={false}
                                    onClick={[Function]}
                                    size="small"
                  >
                                    French
                  </ActionButton>
</styled.div>,
                <styled.h3>
                  Page 
                  1
</styled.h3>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <ActionButton
                      active={true}
                      onClick={[Function]}
                      size="small"
>
                      English
</ActionButton>,
                    <ActionButton
                      active={false}
                      onClick={[Function]}
                      size="small"
>
                      French
</ActionButton>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "active": true,
                      "children": "English",
                      "onClick": [Function],
                      "size": "small",
                    },
                    "ref": null,
                    "rendered": "English",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "active": false,
                      "children": "French",
                      "onClick": [Function],
                      "size": "small",
                    },
                    "ref": null,
                    "rendered": "French",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "Page ",
                    1,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Page ",
                  1,
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "currentLanguage": "english",
              "loadingData": true,
              "text": Array [
                "one two three",
              ],
              "translating": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <ActionButton
                  onClick={[Function]}
                  size="large"
>
                  Previous Page
</ActionButton>,
                <ActionButton
                  onClick={[Function]}
                  size="large"
>
                  Next Page
</ActionButton>,
                <ActionButton
                  onClick={[Function]}
                  size="large"
>
                  Translate
</ActionButton>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Previous Page",
                  "onClick": [Function],
                  "size": "large",
                },
                "ref": null,
                "rendered": "Previous Page",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Next Page",
                  "onClick": [Function],
                  "size": "large",
                },
                "ref": null,
                "rendered": "Next Page",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Translate",
                  "onClick": [Function],
                  "size": "large",
                },
                "ref": null,
                "rendered": "Translate",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
